--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "idea-plat",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "main": "/server/index.js",
+  "type":"module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm-run-all -p --parallel client server",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "client": "vite",
+    "server": "nodemon server/index.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.0",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1"
