--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "main": "/server/index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "npm-run-all -p --parallel client server",
     "build": "tsc && vite build",
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "formik": "^2.4.5",
     "nodemon": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
