--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.1"
+    "react-redux": "^9.1.1",
+    "vite-express": "^0.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
